[gd_scene load_steps=13 format=3 uid="uid://b6gs3mjn2hh6s"]

[ext_resource type="Texture2D" uid="uid://b3iy1d3fb2xwo" path="res://assets/sprites/user_interface/Potion_Bar_UI.png" id="1_gq1it"]
[ext_resource type="Script" path="res://scripts/misc/UserInterface.gd" id="1_nx0aw"]
[ext_resource type="Texture2D" uid="uid://be7vafnl5pd0a" path="res://assets/sprites/user_interface/Potion_Bar_UI_Glass-export.png" id="2_jn74y"]
[ext_resource type="Texture2D" uid="uid://b2hhgehgjke3a" path="res://assets/sprites/user_interface/Potion_Bar_UI_Liquid-export-export.png" id="4_ov4jh"]
[ext_resource type="Script" path="res://scenes/Potion.gd" id="5_vcbiw"]

[sub_resource type="LabelSettings" id="LabelSettings_iv6k7"]
font_size = 50
font_color = Color(0.360784, 0.227451, 0.576471, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_250m8"]
resource_name = "Fade_In"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3.5, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0.588235), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 3.5, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tdlcq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.588235)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tkxjc"]
_data = {
"Enveloped": SubResource("Animation_250m8"),
"RESET": SubResource("Animation_tdlcq")
}

[sub_resource type="Animation" id="Animation_iyk6i"]
resource_name = "Fade_In"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5fdrh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_11wrp"]
_data = {
"Fade_In": SubResource("Animation_iyk6i"),
"RESET": SubResource("Animation_5fdrh")
}

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_nx0aw")

[node name="UIController" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InGameUI" type="MarginContainer" parent="UIController"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -63.0
offset_right = 64.0
offset_bottom = 1.0
grow_vertical = 0
scale = Vector2(5, 5)
pivot_offset = Vector2(0, 62)

[node name="Potion" type="TextureProgressBar" parent="UIController/InGameUI"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
fill_mode = 3
texture_under = ExtResource("2_jn74y")
texture_over = ExtResource("1_gq1it")
texture_progress = ExtResource("4_ov4jh")
texture_progress_offset = Vector2(28, 16)
script = ExtResource("5_vcbiw")

[node name="Enveloped_UI" type="MarginContainer" parent="UIController"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UIController/Enveloped_UI"]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="UIController/Enveloped_UI"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Enveloped_text" type="Label" parent="UIController/Enveloped_UI/HBoxContainer"]
layout_mode = 2
text = "ENVELOPED"
label_settings = SubResource("LabelSettings_iv6k7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UIController/Enveloped_UI"]
libraries = {
"": SubResource("AnimationLibrary_tkxjc")
}

[node name="FadeIn_UI" type="MarginContainer" parent="UIController"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="UIController/FadeIn_UI"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UIController/FadeIn_UI"]
libraries = {
"": SubResource("AnimationLibrary_11wrp")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.5

[connection signal="visibility_changed" from="UIController/Enveloped_UI" to="." method="_on_enveloped_ui_visibility_changed"]
